# ncr

./: .gitignore  .goreleaser.yaml  CONTRIBUTING.md  README.md  TODO.md  anchors_test.go  cache.go  cache_test.go  chunking_test.go  costing.go  costing_test.go  embed.go  go.mod  index.go  index_split_test.go  index_test.go  ingest.go  ingest_test.go  local_test.go  main.go  main_test.go  normalize.go  order.go  order_test.go  plan.go  plan_test.go  pyproject.toml  reconcile.go  reconcile_test.go  render.go  requirements.txt  reviewserver.go  reviewserver_test.go  segments.go  serve.go  serve_test.go  spinner.go  spinner_test.go  state.go  target_test.go  (+3 more)
.github/workflows/: ci.yml  pages.yml  release.yml
demos/datasette-column-types/: ingest.json  meta.yaml  plan.json
demos/gitea-job-summaries/: ingest.json  meta.yaml  plan.json
demos/keycloak-oid4vci-crud/: ingest.json  meta.yaml  plan.json
demos/supabase-query-rewrite/: ingest.json  meta.yaml  plan.json
demos/uv-check-command/: ingest.json  meta.yaml  (+1 more)
docs/: adr-001-go-cli.md  completeness.md  demo-gallery-candidates.md  demo-gallery-spec.md  design-review-comments.md  design.md  ingest.md  schema.md
go/: README.md  go.mod  go.sum  main.go  md.go  render.go  templates.go  types.go
ncr/: __main__.py  cache.py  index.py  ingest.py  md.py  normalize.py  plan.py  reconcile.py  render.py
prompts/: 00-single-shot.md  01-segment.md  02-layer.md  03-graph-and-order.md  04-annotate.md  README.md
site/: index.html  inject-banner.py
tests/: test_index.py  test_reconcile.py
web/: review.css  review.js
(+3 files in other folders)
