[project]
name = "ncr"
version = "0.1.0"
description = "Narrative, outside-in code review — explain a diff in a call-path reading order."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40",  # LLM plan step
    "pygments>=2.17",   # syntax highlighting in rendered diffs
]

[project.scripts]
ncr = "ncr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ncr"]

# Ship the prompt templates inside the installed package so the LLM step can find
# them when ncr is run as an installed console script (see ncr/plan.py loader).
[tool.hatch.build.targets.wheel.force-include]
"prompts" = "ncr/prompts"
